[package]
edition="2024"
name   ="snip"
version="0.1.0"

[dependencies]
device_query="1.1.3"
eframe={ version="0.30", features=["default"] }
egui="0.31.0"
image="0.24.9"
screenshots="0.5.4"
winapi={ version="0.3.9", features=["windef", "winuser"] }
windows={ version="0.48", features=[
  "Win32_Foundation",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Ole",
  "Win32_System_SystemInformation",
  "Win32_System_Time",
  "Win32_UI_Shell",
] }
winit="0.30.9"
