[package]
edition="2024"
name   ="snip"
version="0.1.1"
authors=["Ethan Henry (@tadghh_)"]
description="An alternative to Windows Snip and Sketch"
repository="https://github.com/tadghh/snip"

[profile.release]
codegen-units  =1
debug          ="none"
incremental    =false
lto            ="thin"
opt-level      ="z"
overflow-checks=false
panic          ="abort"
rpath          =false
strip          ="symbols"

[dependencies]
chrono ={ version = "0.4.41",default-features = false, features=["clock"]}
device_query={ version ="1.1.3",default-features = false}
eframe = { version = "0.30", default-features = false, features = ["glow", "default_fonts"] }
egui={ version ="0.31.1",default-features = false}
image = { version = "0.24.9", default-features = false, features = ["png"] }
rayon = { version = "1.10.0",default-features = false}
screenshots="0.5.4"
winapi={ version="0.3.9", features=["windef", "winuser"] }
windows={ version="0.48", features=[
  "Win32_Foundation",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Ole",
  "Win32_System_SystemInformation",
  "Win32_System_Time",
  "Win32_UI_Shell",
] }
winit={ version = "0.30.10",default-features = false}
